add output in base a punteggi

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <div id="countdown"></div>
 
+    <div id="punteggio"></div>
+    <div id="indovinati"></div>
+
 
     <script src="js/script.js"></script>
     
